--- a/ServiceP2p/.settings/org.eclipse.core.resources.prefs
+++ b/ServiceP2p/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//WebContent/ntps/404/500.jsp=UTF-8
+encoding//WebContent/ntps/404/lock-screen.jsp=UTF-8
 encoding//WebContent/ntps/element/button.jsp=UTF-8
 encoding//WebContent/ntps/element/calendar.jsp=UTF-8
 encoding//WebContent/ntps/element/chart.jsp=UTF-8
