--- a/ServiceP2p/.settings/org.eclipse.core.resources.prefs
+++ b/ServiceP2p/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding//WebContent/ntps/element/element.jsp=UTF-8
 encoding//WebContent/ntps/element/grids.jsp=UTF-8
 encoding//WebContent/ntps/element/tree.jsp=UTF-8
 encoding//WebContent/ntps/element/typhography.jsp=UTF-8
+encoding//WebContent/ntps/head/head.jsp=UTF-8
 encoding//WebContent/ntps/icon.jsp=UTF-8
 encoding//WebContent/ntps/login.jsp=UTF-8
 encoding//src/com/p2p/shiro/MyRealm.java=UTF-8
